--- a/models/inference.ipynb
+++ b/models/inference.ipynb
@@ -472,82 +472,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import csv\n",
-        "\n",
-        "all_text = []\n",
-        "# open .tsv file\n",
-        "with open(\"test.tsv\") as file:\n",
-        "\n",
-        "    tsv_file = csv.reader(file, delimiter=\"\\t\")     \n",
-        "    for line in tsv_file:\n",
-        "        all_text.append(line)"
-      ],
-      "metadata": {
-        "id": "4Smf3xqhED16"
-      },
-      "execution_count": 85,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#reformat the test file for normalizing process\n",
-        "no_nan_li = [i for i in all_text if len(i)!=0]\n",
-        "df = pd.DataFrame()\n",
-        "df['text'] = [i[0].strip() for i in no_nan_li]\n",
-        "truth = df[df.text.str.contains(\"- Gold:\")]\n",
-        "predcs = df[df.text.str.contains(\"- Pred:\")]\n",
-        "truth_no_normalize = [i.split(\":\")[-1] for i in truth.text.tolist()]\n",
-        "preds_no_normalize = [i.split(\":\")[-1] for i in predcs.text.tolist()]"
-      ],
-      "metadata": {
-        "id": "-Blz1rR_EIa0"
-      },
-      "execution_count": 86,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def normalize_function(text):\n",
-        "  try:\n",
-        "    text = text.split(\".\")[0]\n",
-        "    return text\n",
-        "  except:\n",
-        "    return text"
-      ],
-      "metadata": {
-        "id": "ONHJ3CxuIyDX"
-      },
-      "execution_count": 87,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "normalize_truth = [normalize_function(text) for text in truth_no_normalize]\n",
-        "normalize_preds = [normalize_function(text) for text in preds_no_normalize]"
-      ],
-      "metadata": {
-        "id": "OLw5e7jwKS3x"
-      },
-      "execution_count": 88,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class_name = list(set(normalize_truth))"
-      ],
-      "metadata": {
-        "id": "8aXj0kbqLVh-"
-      },
-      "execution_count": 89,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**Classification Report after Normalizing the Classes**\n",
@@ -561,16 +485,55 @@
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import confusion_matrix, classification_report\n",
-        "print(classification_report(normalize_truth,normalize_preds,target_names=class_name))"
+        "import csv\n",
+        "\n",
+        "def normalize_function(text):\n",
+        "  try:\n",
+        "    text = text.split(\".\")[0]\n",
+        "    return text\n",
+        "  except:\n",
+        "    return text\n",
+        "\n",
+        "def normalizing_classification_report(path):\n",
+        "  all_text = []\n",
+        "# open .tsv file\n",
+        "  with open(path) as file:\n",
+        "\n",
+        "      tsv_file = csv.reader(file, delimiter=\"\\t\")     \n",
+        "      for line in tsv_file:\n",
+        "          all_text.append(line)\n",
+        "  #reformat the test file for normalizing process\n",
+        "  no_nan_li = [i for i in all_text if len(i)!=0]\n",
+        "  df = pd.DataFrame()\n",
+        "  df['text'] = [i[0].strip() for i in no_nan_li]\n",
+        "  truth = df[df.text.str.contains(\"- Gold:\")]\n",
+        "  predcs = df[df.text.str.contains(\"- Pred:\")]\n",
+        "  truth_no_normalize = [i.split(\":\")[-1] for i in truth.text.tolist()]\n",
+        "  preds_no_normalize = [i.split(\":\")[-1] for i in predcs.text.tolist()]\n",
+        "  normalize_truth = [normalize_function(text) for text in truth_no_normalize]\n",
+        "  normalize_preds = [normalize_function(text) for text in preds_no_normalize]\n",
+        "  class_name = list(set(normalize_truth))\n",
+        "  print(classification_report(normalize_truth,normalize_preds,target_names=class_name))"
       ],
       "metadata": {
-        "id": "0W_fIRh_K-BV",
-        "outputId": "7eb6acdb-20a6-4195-c8cb-edf418aa6854",
+        "id": "k7nGwKwMOhpb"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalizing_classification_report(\"test.tsv\")"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j3ZTeQMJK-0y",
+        "outputId": "aed2c262-6c95-4603-9294-d267190d9881"
       },
-      "execution_count": 90,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +583,7 @@
         ""
       ],
       "metadata": {
-        "id": "j3ZTeQMJK-0y"
+        "id": "e1hRRlTMPNPL"
       },
       "execution_count": null,
       "outputs": []
